day02:Dom事件和Tab切换

--- a/day01-DOM基础/晨测.md
+++ b/day01-DOM基础/晨测.md
@@ -3,14 +3,14 @@
     - Undefined类型只有一个值，即undefined。我们不会对一个值设置undefined，一般都是出现错误的时候，才会被我们打印出来
     - null 类型是第二个只有一个值的数据类型，这个特殊的值是 null，null 值表示一个空对象指针，而这也正是使用 typeof 操作符检测null时会返回"object"的原因
     - undefined出现的场景：
-        - 变量被声明了，但没有赋值时，就等于undefined
-        - 调用函数时，应该提供的参数没有提供，该参数等于undefined
-        - 对象没有赋值的属性，该属性的值为undefined
+        - 变量被声明了，但没有赋值时，就等于undefined  
+        - 调用函数时，应该提供的参数没有提供，该参数等于undefined  
+        - 对象没有赋值的属性，该属性的值为undefined  
         - 函数没有返回值时，默认返回undefined
     - null出现的场景：
         - 作为函数的参数，表示该函数的参数不是对象
         - 作为对象原型链的终点
-        - 如果定义的变量准备在将来用于保存对象，那么最好将该变量初始化为null而不是其他值
+        - 如果定义的变量准备在将来用于保存对象，那么最好将该变量初始化为null而不是其他值 var a = null;
         - 将一个对象变为垃圾对象的时候，设置变量的值为null
 
 - 什么是DOM
@@ -47,7 +47,6 @@
     function getFirstChild(obj) {
         return obj.firstElementChild || obj.firstChild;
     }
-
 
 作业提交地址：
 https://wss.pet/s/4jye6pr30rs
