--- a/day02-DOM事件/晨测.md
+++ b/day02-DOM事件/晨测.md
@@ -17,12 +17,23 @@
     - 引用类型值：object（正则、数组、对象、函数。。。。。）
     - 基本类型值特点：
         - 我们不能给基本类型值添加属性和方法 就算添加也是获取不到的
+        str.name = "hello";
+
+        var _str = new String(str);
+        _str.name = "hello"
+        delete _str
+
+        str.name
+
         - 基本类型的比较是值的比较
         - 基本类型的变量是存放在栈区的（栈区指内存里的栈内存),栈区包括了变量的标识符和变量的值
+        - 基本类型的值是不可变的
+
     - 引用类型值特点：
         - 引用类型的值是可变的，我们可以为引用类型添加属性和方法
         - 引用类型的值是同时保存在栈内存和堆内存中的对象，当我们访问某一个对象的时候，要先访问到栈区的地址 然后引用到堆区的值
         - 引用类型的比较是引用的比较
+        
 
 - 为什么要标签语义化
     - 语义化标签更具有可读性，便于团队的开发和维护
