--- a/day03-BOM/晨测.md
+++ b/day03-BOM/晨测.md
@@ -36,7 +36,7 @@
         }
 
 
-- 谈一谈BFC
+- 谈一谈 BFC
     - BFC(块级格式化上下文)
     - BFC 的创建
         根元素（html）
@@ -51,6 +51,15 @@
     - BFC应用
         - 防止外边距折叠
         - 清除浮动
+        .clearFix{
+            *zoom:1;
+        }
+        .clearFix:after{
+            content:"\200B";
+            height:0;
+            display:block;
+            clear:both;
+        }
 
 - 谈一谈window对象
     1.代表窗口，作为BOM对象的核心
