--- a/day05-DOM进阶/晨测.md
+++ b/day05-DOM进阶/晨测.md
@@ -65,6 +65,8 @@
     - 删除元素：
         A.removeChild(B)
         删除A元素中的子元素B
+        A.remove()
+        删除A
     - 替换元素：
         A.replaceChild(new,old)
         用new 替换 old
