--- a/day07-DOM高级/晨测.md
+++ b/day07-DOM高级/晨测.md
@@ -32,7 +32,7 @@
 
 - 常见的H5标签及相应的含义
     - header:用来定义文档（网页或者是某一个段落）的页眉（头部）
-    - footer:footer标签代表一个网页或者章节内容的底部区域（页脚
+    - footer:footer标签代表一个网页或者章节内容的底部区域（页脚）
     - article:表文档、页面、或程序中，可以独立的完整的被外部引用的内容
     - nav:表示在当前文档或其他文档中提供导航链接。
         静态导航：
