--- a/day09-JS高级/晨测.md
+++ b/day09-JS高级/晨测.md
@@ -2,6 +2,10 @@
 - 手写call（带注释）
 
 - 检测数据类型4种方法
+    - typeof:undefined string boolean number function 
+    - ===:null undefined
+    - a instanceof b : 判断b是否在a的原型链上
+    - Object.prototype.toString.call(obj).slice(8,-1).toLowerCase();
 
 - 谈一谈this
     - 什么是this
