--- a/day10-JS高级/晨测.md
+++ b/day10-JS高级/晨测.md
@@ -19,6 +19,6 @@
 
     注意事项：
     - 当函数定义的时候，就已经有了显式原型了，是一个空对象（constructor属性除外），但是只有当前函数实例化对象能够使用
-    - 隐式原型在创建对象的时候就自动添加了，当访问对象的属性的时候可能会沿着隐式原型查找
+    - 隐式原型在创建对象的时候就自动添加了，当访问对象的属性的时候可能会沿着隐式原型查找，这个就是原型链查找的过程
 
 - 终极原型图
