--- a/day14-jQuery/晨测.md
+++ b/day14-jQuery/晨测.md
@@ -2,17 +2,37 @@
     - bootCDN（区分jQuery版本）
 
     - jQuery结构
-
+        $.ajax()
+        $().css()
+ 
     - jQuery的包裹
+
     
     - jQuery对象和JS对象的互换
+        .get()
 
     - jQuery的类数组操作
+        - children
+        - parent
+        - siblings
+        - prev
+        - next
+        - end
+        - find
+        - prevAll
+        - nextAll
 
     - jQuery 选择器查漏补缺
 
-    - animate动画 及动画队列 及 stop方法
+
+    - animate动画 及动画队列 及 stop方法    
+
 
     - jQuery的增删改查
+        - $();
+        - append
+        - clone
+        - replaceAll
+        - remove()
 
     - 完成Tab切换
