--- a/day19-ES6+/晨测.md
+++ b/day19-ES6+/晨测.md
@@ -51,7 +51,7 @@
     什么是promise:
         - 一个异步编程的解决方案，将异步操作以同步的形式表达出来，避免回调地狱方式的书写。
 
-    promise对象
+    Promise对象
         - Promise是一个构造函数，需要实例化调用，得到一个实例化的promise对象
         - Promise对象上有静态方法：all、allSettled、any、race、reject、resolve
         - Promise原型对象上有：catch、finally、then
@@ -72,7 +72,7 @@
             - resolved/fulfilled:成功状态，只要在promise中调用了resolve即可返回成功状态
             - rejected:失败状态，当promise调用了reject()方法的时候，返回失败状态
 
-        - [[PromiseResult]]:promise内部成功或失败的时候，调用resolve或reject方法，给的参数
+        -[[PromiseResult]]:promise内部成功或失败的时候，调用resolve或reject方法，给的参数
 
 
 - 谈一谈promise的原型方法
@@ -94,7 +94,7 @@
         - catch回调函数的参数 就是调用catch的失败promise对象的promiseResulte值
 
     promise.finally():
-        - 可以捕获成功或失败的promise状态，一般作为整个promise异步操作的最后异步
+        - 可以捕获成功或失败的promise状态，一般作为整个promise异步操作的最后一步
     promise.then和catch如果不书写任何参数，则会直接把调用then或catch的promise对象穿透过来并返回
 
 
